--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,13 +55,13 @@ button:focus-visible {
 }
 
 .close-button:hover {
-    border: none !important;
+    border: none;
 }
 
 .close-button:focus,
 .close-button:focus-visible,
 .close-button:active {
-    outline: none !important;
-    box-shadow: none !important;
-    border: none !important;
+    outline: none;
+    box-shadow: none;
+    border: none;
 }
